--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 quarkus.http.port=9090
+quarkus.mongodb.connection-string=mongodb+srv://crimsant:8T4j8O2Zckc0bl0T@cluster0.chornm5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+quarkus.mongodb.database=product
